--- a/style.css
+++ b/style.css
@@ -2,6 +2,41 @@
     padding: 0%;
     margin: 0%;
 }
+
+.main-namue{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color:#B2BABB ;
+
+}
+.navbar ul{
+    list-style: none;
+}
+.navbar ul li{
+    display: inline-block;
+    width: 120px;
+    height: 43px;
+   
+    text-align: center;
+    border-radius: 10px;
+    padding-top: 5px;
+    background-image: linear-gradient(#D4EFDF,#FEF5E7 ,#F4ECF7 );
+}
+.navbar ul li a{
+    font-size: 30px;
+    text-decoration: none;
+    color:#212F3D  ;
+    font-family: 'Merriweather Sans', sans-serif;
+}
+
+.logo-image{
+    width: 150px;
+    height: 150px;
+}
+
 /*........ header section start ........*/
 .container{
     width: 100%;
